<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_pwdlost"
    android:fitsSystemWindows="true"

    tools:context=".PwdResetActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"

        android:contentDescription="@string/locknest_logo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="30dp"

        app:srcCompat="@mipmap/welcome_screen" />


    <TextView
        android:id="@+id/title_pwdlost_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dosis_semibold"
        android:padding="5dp"
        android:paddingTop="30dp"
        android:text="@string/password_restoration"
        android:textAlignment="center"
        android:textColor="@color/grey_darkest"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:id="@+id/desc_pwdlost_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dosis_semibold"
        android:padding="5dp"
        android:text="@string/desc_pwdlost"
        android:textAlignment="center"
        android:textColor="@color/grey_darkest"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_pwdlost_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_pdwlost"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"

        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_pwdlost_layout"

        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"

        app:startIconContentDescription="@string/prompt_email"
        app:startIconDrawable="@drawable/ic_mail_black_24dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_pwdlost_text"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dosis_semibold"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reset"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"

        android:layout_marginTop="24dp"
        android:text="@string/reset_password"
        android:textColor="@color/bg_pwdlost"

        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_pdwlost" />

    <Button
        android:id="@+id/btn_login"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"

        android:layout_marginTop="16dp"
        android:background="@null"
        android:text="@string/back"
        android:textAllCaps="false"

        android:textColor="@color/grey_darkest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset" />
</androidx.constraintlayout.widget.ConstraintLayout>